--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "socket-chat-example",
   "version": "0.0.1",
   "description": "my first socket.io app",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "circular-json": "^0.3.0",
     "express": "^4.10.2",
