--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "circular-json": "^0.3.0",
+    "ejs": "^2.4.2",
     "express": "^4.10.2",
     "redis": "^2.6.2",
     "socket.io": "^1.4.8"
